--- a/app/src/main/res/layout/activity_interfaz_negocio.xml
+++ b/app/src/main/res/layout/activity_interfaz_negocio.xml
@@ -28,6 +28,7 @@
         android:layout_width="160dp"
         android:layout_height="51dp"
         android:layout_marginTop="48dp"
+        android:onClick="irCatalogo"
         android:text="@string/btn_catalogo"
         android:textColor="#000000"
         android:textSize="13dp"
@@ -40,7 +41,8 @@
         app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.005" />
+        app:layout_constraintVertical_bias="0.005"
+        tools:ignore="TextSizeCheck" />
 
     <Button
         android:id="@+id/btn_generar_QR"
@@ -61,7 +63,8 @@
         app:layout_constraintHorizontal_bias="0.215"
         app:layout_constraintStart_toEndOf="@+id/btn_catalogo"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintVertical_bias="0.005" />
+        app:layout_constraintVertical_bias="0.005"
+        tools:ignore="TextSizeCheck" />
 
     <Button
         android:id="@+id/btn_Abrir_Cerrar_Local"
@@ -82,7 +85,8 @@
         app:layout_constraintHorizontal_bias="0.215"
         app:layout_constraintStart_toEndOf="@+id/btn_publicar_anuncio"
         app:layout_constraintTop_toBottomOf="@+id/btn_generar_QR"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TextSizeCheck" />
 
     <Button
         android:id="@+id/btn_publicar_anuncio"
@@ -103,7 +107,8 @@
         app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_catalogo"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/textView19"
