--- a/app/src/main/res/layout/activity_selecciona_usuario.xml
+++ b/app/src/main/res/layout/activity_selecciona_usuario.xml
@@ -9,95 +9,139 @@
 
     <TextView
         android:id="@+id/txtViewBSeleccionaUsuario"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:contentDescription="@string/img_selecciona_usuario_imgCliente"
+        android:gravity="center"
         android:onClick="interfazNegocio"
         android:text="@string/mensaje_bienvenida_selecciona_usuario"
         android:textColor="#0E0E0E"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/img_selecciona_usuario_imgCliente"
+        android:gravity="center"
         android:onClick="interfazNegocio"
         android:text="@string/selecciona_tu_usuario"
         android:textColor="#0E0E0E"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/txtViewBSeleccionaUsuario"
+        app:layout_constraintStart_toStartOf="@+id/txtViewBSeleccionaUsuario"
         app:layout_constraintTop_toBottomOf="@+id/txtViewBSeleccionaUsuario" />
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:contentDescription="@string/img_selecciona_usuario_imgCliente"
+        android:gravity="center"
         android:onClick="interfazNegocio"
         android:text="@string/selecciona_usuario_Cliente"
-        android:textColor="#070707"
+        android:textColor="#000000"
         android:textSize="30dp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/img_cliente_selec_usu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.065" />
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="@+id/textView6"
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:contentDescription="@string/img_selecciona_usuario_imgCliente"
+        android:gravity="center"
         android:onClick="interfazNegocio"
         android:text="@string/selecciona_usuario_negocio"
-        android:textColor="#070707"
+        android:textColor="#000000"
         android:textSize="30dp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/img_negocio_selec_usu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="@+id/img_cliente_selec_usu"
+        app:layout_constraintStart_toStartOf="@+id/img_cliente_selec_usu"
         app:layout_constraintTop_toBottomOf="@+id/img_cliente_selec_usu" />
 
     <ImageView
         android:id="@+id/img_negocio_selec_usu"
         style="@style/diseño_botones"
-        android:layout_width="255dp"
-        android:layout_height="174dp"
+        android:layout_width="0dp"
+        android:layout_height="97dp"
         android:background="@drawable/dis_back_txt"
         android:contentDescription="@string/selec_usu_negocio"
         android:onClick="interfazNegocio"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        app:layout_constraintEnd_toEndOf="@+id/textView48"
+        app:layout_constraintStart_toStartOf="@+id/textView48"
+        app:layout_constraintTop_toBottomOf="@+id/textView48"
         app:srcCompat="@mipmap/img_cliente_selecciona_negocio_foreground" />
 
     <ImageView
         android:id="@+id/img_cliente_selec_usu"
         style="@style/diseño_botones"
-        android:layout_width="255dp"
-        android:layout_height="174dp"
+        android:layout_width="0dp"
+        android:layout_height="97dp"
         android:background="@drawable/dis_back_txt"
         android:contentDescription="@string/img_selec_usu_img_cliente"
         android:onClick="interfazUsuario"
         app:backgroundTint="@null"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintEnd_toEndOf="@+id/textView45"
+        app:layout_constraintStart_toStartOf="@+id/textView45"
+        app:layout_constraintTop_toBottomOf="@+id/textView45"
         app:srcCompat="@mipmap/selecciona_usuario_img_usu_foreground" />
+
+    <TextView
+        android:id="@+id/textView42"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Usa la aplicacion para:"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/textView10"
+        app:layout_constraintStart_toStartOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <TextView
+        android:id="@+id/textView45"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/usa_la_app_para"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/textView42"
+        app:layout_constraintStart_toStartOf="@+id/textView42"
+        app:layout_constraintTop_toBottomOf="@+id/textView42" />
+
+    <TextView
+        android:id="@+id/textView47"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Usa la aplicacion para:"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/textView11"
+        app:layout_constraintStart_toStartOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <TextView
+        android:id="@+id/textView48"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/usalaapp_para_negocio"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/textView11"
+        app:layout_constraintStart_toStartOf="@+id/textView47"
+        app:layout_constraintTop_toBottomOf="@+id/textView47" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
