--- a/app/src/main/res/layout/activity_publicar_anuncio.xml
+++ b/app/src/main/res/layout/activity_publicar_anuncio.xml
@@ -78,6 +78,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:onClick="borrar"
         android:text="Borrar anuncio"
         android:textColor="#000000"
         android:textSize="20dp"
@@ -151,7 +152,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="ID anuncio"
-        android:inputType="text"
+        android:inputType="numberSigned"
         android:minHeight="48dp"
         android:textColor="#020202"
         android:textColorHint="#000000"
