--- a/app/src/main/res/layout/activity_generar.xml
+++ b/app/src/main/res/layout/activity_generar.xml
@@ -32,7 +32,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="ID QR"
-        android:inputType="text"
+        android:inputType="numberDecimal"
         android:textColor="#000000"
         android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="@+id/textView20"
