--- a/app/src/main/res/layout/activity_selecciona_usuario.xml
+++ b/app/src/main/res/layout/activity_selecciona_usuario.xml
@@ -106,6 +106,8 @@
         android:gravity="center"
         android:text="Usa la aplicacion para:"
         android:textColor="#000000"
+        android:textSize="15dp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@+id/textView10"
         app:layout_constraintStart_toStartOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -117,6 +119,8 @@
         android:gravity="center"
         android:text="@string/usa_la_app_para"
         android:textColor="#000000"
+        android:textSize="15dp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@+id/textView42"
         app:layout_constraintStart_toStartOf="@+id/textView42"
         app:layout_constraintTop_toBottomOf="@+id/textView42" />
@@ -128,6 +132,8 @@
         android:gravity="center"
         android:text="Usa la aplicacion para:"
         android:textColor="#000000"
+        android:textSize="15dp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@+id/textView11"
         app:layout_constraintStart_toStartOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -139,6 +145,8 @@
         android:gravity="center"
         android:text="@string/usalaapp_para_negocio"
         android:textColor="#000000"
+        android:textSize="15dp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@+id/textView11"
         app:layout_constraintStart_toStartOf="@+id/textView47"
         app:layout_constraintTop_toBottomOf="@+id/textView47" />
