--- a/app/src/main/res/layout/activity_cascaron_negocio_interfaz_negocio.xml
+++ b/app/src/main/res/layout/activity_cascaron_negocio_interfaz_negocio.xml
@@ -68,6 +68,7 @@
         style="@style/diseño_botones"
         android:layout_width="140dp"
         android:layout_height="50dp"
+        android:onClick="irVerChats"
         android:text="Ver chats"
         android:textColor="#000000"
         android:textSize="13dp"
