--- a/app/src/main/res/layout/activity_catalogo_interfaz_negocio.xml
+++ b/app/src/main/res/layout/activity_catalogo_interfaz_negocio.xml
@@ -92,7 +92,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:onClick="Insertar"
+        android:onClick="insertar"
         android:text="Insertar"
         android:textColor="#000000"
         app:icon="@drawable/lapiz"
@@ -128,7 +128,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:onClick="buscarCorte"
+        android:onClick="buscar"
         android:text="Buscar"
         android:textColor="#000000"
         app:icon="@drawable/buscadddd"
